--- a/app/src/main/res/drawable-v24/round_chatbtn.xml
+++ b/app/src/main/res/drawable-v24/round_chatbtn.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
     android:shape="rectangle" >
-    <solid android:color="#F5F4FA" />
+    <solid android:color="#5C5B5C" />
     <corners
         android:bottomLeftRadius="12dp"
         android:bottomRightRadius="12dp"
