--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -77,33 +77,34 @@
 
     <LinearLayout
         android:id="@+id/page"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="#9EE3E3"
+        android:background="#F8F8F8"
         android:orientation="horizontal"
+        android:visibility="gone"
         tools:layout_editor_absoluteX="-16dp"
         tools:layout_editor_absoluteY="631dp">
 
     </LinearLayout>
 
     <LinearLayout
-        android:visibility="gone"
         android:id="@+id/page2"
-        android:layout_gravity="bottom"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="#9EE3E3"
+        android:layout_height="100dp"
+        android:layout_gravity="bottom"
+        android:background="#F8F8F8"
         android:orientation="horizontal"
+        android:visibility="gone"
         tools:layout_editor_absoluteX="-40dp"
         tools:layout_editor_absoluteY="365dp">
 
         <ImageView
             android:id="@+id/map_image"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:paddingTop="5dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_margin="5dp"
             android:paddingLeft="5dp"
+            android:paddingTop="5dp"
             android:paddingBottom="5dp"
             tools:srcCompat="@tools:sample/avatars" />
 
@@ -111,8 +112,12 @@
             android:id="@+id/map_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:fontFamily="@font/seoulhangang"
             android:paddingTop="20dp"
-            android:paddingRight="30dp" />
+            android:paddingRight="30dp"
+            android:textColor="#000000"
+            android:textSize="18sp" />
 
     </LinearLayout>
 
