--- a/app/src/main/res/layout/fragment_shop_information_second.xml
+++ b/app/src/main/res/layout/fragment_shop_information_second.xml
@@ -11,11 +11,11 @@
 
         <ImageView
             android:id="@+id/second_info_image"
-            android:layout_width="289dp"
-            android:layout_height="233dp"
-            android:layout_marginStart="61dp"
+            android:layout_width="0dp"
+            android:layout_height="250dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="19dp"
-            android:layout_marginEnd="61dp"
+            android:layout_marginEnd="30dp"
             android:layout_marginBottom="13dp"
             android:paddingLeft="5dp"
             android:paddingTop="5dp"
@@ -34,6 +34,7 @@
             android:layout_marginTop="45dp"
             android:layout_marginEnd="13dp"
             android:layout_marginBottom="24dp"
+            android:fontFamily="@font/seoulhangang"
             android:hint="표시될 내용을 입력해 주세요"
             android:paddingTop="10dp"
             android:paddingRight="30dp"
@@ -44,32 +45,35 @@
             app:layout_constraintTop_toBottomOf="@+id/second_info_image" />
 
         <Button
-            android:id="@+id/second_info_btn"
             android:layout_width="75dp"
             android:layout_height="50dp"
+            android:background="@drawable/btn_background"
+            android:fontFamily="@font/seoulhangang"
+            android:text="완료"
+            android:textColor="#D5D5D5"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:id="@+id/second_info_btn"
+
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="44dp"
-            android:background="#EDBC00"
-            android:text="완료"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
-        android:id="@+id/textView7"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="#EDBC00"
-        android:gravity="center"
-        android:text="가게 등록"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="#EDBC00"
+            android:fontFamily="@font/seoulhangang"
+            android:gravity="center"
+            android:text="가게 등록"
+            android:textColor="#FFFFFF"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
