--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -12,11 +12,12 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:layout_marginRight="10dp"
+            android:id="@+id/iv_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:id="@+id/iv_image"
-            android:background="@drawable/ic_launcher_foreground"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"
+            android:src="@drawable/bikedefault" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -27,6 +28,7 @@
                 android:id="@+id/tv_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/seoulhangang"
                 android:padding="5dp"
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -42,6 +44,7 @@
                 android:id="@+id/tv_weight_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/seoulhangang"
                 android:padding="5dp"
                 android:textColor="@color/black"
                 android:textSize="18sp"
