--- a/app/src/main/res/layout/marker.xml
+++ b/app/src/main/res/layout/marker.xml
@@ -5,21 +5,22 @@
     android:layout_height="wrap_content"
     >
 
+    <TextView
+        android:id="@+id/tv_marker"
+        android:layout_width="50dp"
+        android:layout_height="16dp"
+        android:gravity="center"
+        android:paddingTop="1dp"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:textStyle="bold" />
     <LinearLayout
+        android:layout_marginTop="16dp"
         android:layout_width="50dp"
         android:layout_height="56dp"
         android:background="@drawable/marker"
         android:orientation="vertical">
 
-        <TextView
-            android:paddingTop="1dp"
-            android:id="@+id/tv_marker"
-            android:layout_width="50dp"
-            android:layout_height="16dp"
-            android:gravity="center"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"/>
 
         <TextView
             android:id="@+id/tv_marker2"
